[gd_scene format=3 uid="uid://bjh2emlayb0vj"]

[ext_resource type="Script" uid="uid://cj37h1ckj3bnk" path="res://Scripts/SceneScripts/attraction_card.gd" id="1_ily3r"]
[ext_resource type="Texture2D" uid="uid://6vu7bukxwcki" path="res://Assets/Piano.png" id="2_ily3r"]
[ext_resource type="FontFile" uid="uid://l3xf26id3o6y" path="res://Assets/Font/CowboyJunior-GO6Dq.ttf" id="3_e6ux2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyvc6"]
bg_color = Color(0.70980394, 0.52156866, 0.42352942, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_pjqw3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2b4nf"]
bg_color = Color(0.49019608, 0.36862746, 0.26666668, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjqw3"]
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6ux2"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="AttractionCard" type="Control" unique_id=1096644621]
custom_minimum_size = Vector2(260, 260)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -160.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ily3r")

[node name="Panel" type="Panel" parent="." unique_id=990241661]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyvc6")

[node name="IconContainer" type="Control" parent="." unique_id=198306873]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_top = 10.0
offset_right = 79.0
offset_bottom = 165.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="IconContainer" unique_id=235323477]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_pjqw3")
theme_override_styles/panel = SubResource("StyleBoxFlat_2b4nf")

[node name="Icon" type="TextureRect" parent="IconContainer" unique_id=2080069238]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ily3r")
expand_mode = 3

[node name="Name" type="Label" parent="." unique_id=795025569]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -90.0
offset_right = 110.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_e6ux2")
theme_override_font_sizes/font_size = 32
text = "Sample Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostContainer" type="Control" parent="." unique_id=198664284]
custom_minimum_size = Vector2(60, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.5
offset_top = -45.0
offset_right = 27.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="Cost" type="Label" parent="CostContainer" unique_id=687387409]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("3_e6ux2")
theme_override_font_sizes/font_size = 24
text = "$300"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="." unique_id=1907593918]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pjqw3")

[node name="Button" type="Button" parent="." unique_id=1705658065]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_e6ux2")
